// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`listed tool surfaces > profile "chatgpt" lists byte-identical tool descriptors 1`] = `
{
  "orgx_attach_artifact": "6ccc4eb27b74a93c",
  "orgx_cancel_work": "64213b7979c25e43",
  "orgx_capture_decision": "a778cf12f3853b35",
  "orgx_check_execution_readiness": "b4a9c9c334c65820",
  "orgx_complete_plan": "c2cd95375022867d",
  "orgx_complete_work_with_proof": "422682b6a61c9157",
  "orgx_create_initiative": "a48d54880bf14449",
  "orgx_create_initiative_hierarchy": "e5e2555578fcf32c",
  "orgx_create_milestone": "bc14153674491f3e",
  "orgx_create_task": "ef910b43e6d44305",
  "orgx_create_workstream": "0c7aacb11b816c9b",
  "orgx_estimate_agent_task": "d89945435995aecf",
  "orgx_get_agent_status": "4426296bbbb57da7",
  "orgx_get_initiative_progress": "a6fd830bb8f92410",
  "orgx_get_next_actions": "175f6fa8fda2a639",
  "orgx_get_operation_status": "4498e689ee2c0119",
  "orgx_get_operator_brief": "ff13d1871db6661e",
  "orgx_get_receipt_review_queue": "76cb026d706cd17f",
  "orgx_get_work_receipt": "61f894517bd4b90d",
  "orgx_get_workspace_context": "775df16c8548aa03",
  "orgx_handoff_task": "8b24cfca9358e578",
  "orgx_inspect": "a3310755ca68cd0d",
  "orgx_launch_initiative": "dd0c1f34cfa40c3b",
  "orgx_list_pending_decisions": "cbcd42126fa8eee9",
  "orgx_list_work_receipts": "2a2aa1500c9a13cf",
  "orgx_open_artifact_review": "539fb87f468293e5",
  "orgx_open_decision_review": "892a00f2fe48b8b8",
  "orgx_panel_snapshot": "5ab21a96dc7942ff",
  "orgx_pause_work": "0f9b5a001211b5dc",
  "orgx_read_plan": "9048c91df50196ac",
  "orgx_record_plan_edit": "b39499f7468297ab",
  "orgx_request_independent_artifact_review": "f46def909efda1ff",
  "orgx_resume_work": "5f0422b50830fcd2",
  "orgx_retry_work": "b9cec22e43404def",
  "orgx_save_plan": "c882dfe2f429d51e",
  "orgx_search": "f99fd7c7687f97c8",
  "orgx_start_agent_task": "5985a83792b97d34",
  "orgx_start_plan": "97ac287396ae8cfc",
  "orgx_submit_work_receipt": "e10d046c0b4bc526",
  "orgx_update_work": "36a91bd849acaf6f",
  "orgx_validate_initiative_plan": "cf1b9a68ea49d5cd",
  "orgx_validate_work_receipt": "48cfae9eafa43ea6",
  "orgx_widget_approve_artifact": "4841c5d6e8271f8b",
  "orgx_widget_decide": "75098f2ae324724f",
  "orgx_widget_receipt_call": "4ec7f75836201db8",
  "orgx_widget_request_artifact_changes": "f69dc65a2590239d",
  "orgx_widget_select_workspace": "e4ebe2320cc96511",
  "resume_agent_run": "5c016323dee7914e",
}
`;

exports[`listed tool surfaces > profile "claude-code-legacy" lists byte-identical tool descriptors 1`] = `
{
  "get_agent_status": "c51f36b15f1ac6c5",
  "get_initiative_pulse": "8000ba7d77f34876",
  "get_morning_brief": "3ee60fbf0050b478",
  "get_operator_chronicle": "8b05da24982c6e13",
  "orgx_inspect": "f4935c8ba3e51d61",
  "orgx_recommend": "61739aa3d5d17839",
  "orgx_search": "910c1302b3fe5008",
}
`;

exports[`listed tool surfaces > profile "claude-directory" lists byte-identical tool descriptors 1`] = `
{
  "orgx_attach_artifact": "33eaeb2d42614042",
  "orgx_cancel_work": "fb5560d1351b1be5",
  "orgx_capture_decision": "3b17f1a80a80094c",
  "orgx_check_execution_readiness": "8fc0b9ea9e699587",
  "orgx_complete_plan": "1ac9f8e1324c75d4",
  "orgx_complete_work_with_proof": "42a4b805ee76763a",
  "orgx_create_initiative": "c0f08c299478783d",
  "orgx_create_initiative_hierarchy": "6a8a229c6e951a9f",
  "orgx_create_milestone": "db6dfd8063245485",
  "orgx_create_task": "e92aebfb79c326ce",
  "orgx_create_workstream": "bca688c3779e8b85",
  "orgx_estimate_agent_task": "934cd8cf1a9d925f",
  "orgx_get_agent_status": "e7e51f2bb216acc3",
  "orgx_get_initiative_progress": "82028bb22cfe8c02",
  "orgx_get_next_actions": "a1ab541f81830c40",
  "orgx_get_operation_status": "0783cb0c465ea747",
  "orgx_get_operator_brief": "7098f4dd33256527",
  "orgx_get_receipt_review_queue": "8dce238268666de0",
  "orgx_get_work_receipt": "0bf06e7cdf770524",
  "orgx_get_workspace_context": "6e942c3a95bfe865",
  "orgx_handoff_task": "0b16cb7253845fc1",
  "orgx_inspect": "98876fad10d16970",
  "orgx_launch_initiative": "e5f0e78b2cb9c602",
  "orgx_list_pending_decisions": "3d82a373907c99eb",
  "orgx_list_work_receipts": "774f51039880cd40",
  "orgx_open_artifact_review": "16e678e8b79b1f52",
  "orgx_open_decision_review": "1f58fbba7d67a06b",
  "orgx_panel_snapshot": "15d481c807c188c8",
  "orgx_pause_work": "da26b360aa10c5e9",
  "orgx_read_plan": "daa3f67c7fda4d56",
  "orgx_record_plan_edit": "c5c07950aa5add27",
  "orgx_request_independent_artifact_review": "a0e0343b7e43619d",
  "orgx_resume_work": "70eb65fa72c6edb3",
  "orgx_retry_work": "0f6066adf49273d6",
  "orgx_save_plan": "851de932fafa567e",
  "orgx_search": "2caaa3b9d5dd89b1",
  "orgx_start_agent_task": "4eed48526b86f4ba",
  "orgx_start_plan": "c903e4391eecc0e2",
  "orgx_submit_work_receipt": "aff26e1f15df7ea8",
  "orgx_update_work": "e0501a9eec7a8dcc",
  "orgx_validate_initiative_plan": "b7e9d9760fc7307a",
  "orgx_validate_work_receipt": "00d41b90e033aa62",
  "orgx_widget_approve_artifact": "ee5af8ea54d78fe2",
  "orgx_widget_decide": "6c2df3aca0d2b4d3",
  "orgx_widget_receipt_call": "089ffc7f37e03f30",
  "orgx_widget_request_artifact_changes": "13d806d8ea72e2ae",
  "orgx_widget_select_workspace": "7d97b107c32653a1",
  "resume_agent_run": "90b388a6df57d58e",
}
`;

exports[`listed tool surfaces > profile "claude-directory-legacy" lists byte-identical tool descriptors 1`] = `
{
  "check_execution_readiness": "71a53b732c85a37f",
  "get_agent_status": "aabaee8b6a8b22fb",
  "get_initiative_pulse": "35fa8e49f8e7a6be",
  "get_morning_brief": "f216afcf9c323e3f",
  "get_operator_chronicle": "ceffe8cd1cf36fc4",
  "manage_lifecycle": "33875ee01fd0d1c8",
  "orgx_attach": "9a7a339c628a6fea",
  "orgx_bootstrap": "12a87414cb4367fd",
  "orgx_change_entity_state": "bc721c58237c212f",
  "orgx_check_delegation": "14f312a9fdc40cf4",
  "orgx_command_status": "522c3ff992d06b93",
  "orgx_complete_plan": "e7c5ebf07c2cbc2b",
  "orgx_complete_with_proof": "a90c6483779720fa",
  "orgx_create_entity": "2c1055a58d3fa8ea",
  "orgx_delegate_work": "0d5a8b3782faf082",
  "orgx_get_agent_status": "e7e51f2bb216acc3",
  "orgx_get_initiative_progress": "82028bb22cfe8c02",
  "orgx_get_operation_status": "0783cb0c465ea747",
  "orgx_get_operator_brief": "7098f4dd33256527",
  "orgx_get_workspace_context": "6e942c3a95bfe865",
  "orgx_improve_plan": "27f6794c76d7ef15",
  "orgx_inspect": "98876fad10d16970",
  "orgx_list_pending_decisions": "9a4b719a73a9cbc9",
  "orgx_open_decision_review": "0f697667832bead8",
  "orgx_read_plan": "e6250b7d2ceae871",
  "orgx_recommend": "7d4b00772504a14d",
  "orgx_record_decision": "f2d63d447b44aa7a",
  "orgx_record_plan_edit": "37328b752436a7dc",
  "orgx_search": "2caaa3b9d5dd89b1",
  "orgx_start_plan": "773d88d8e7e0c555",
  "orgx_submit_receipt": "cb3ff52ace678434",
  "orgx_update_entity": "ad26ef92f9c0e32b",
  "orgx_widget_approve_artifact": "ee5af8ea54d78fe2",
  "orgx_widget_decide": "6c2df3aca0d2b4d3",
  "orgx_widget_request_artifact_changes": "13d806d8ea72e2ae",
  "resume_agent_run": "90b388a6df57d58e",
  "review_artifact": "fffa3af8e120f00c",
}
`;

exports[`listed tool surfaces > profile "claude-plugin" lists byte-identical tool descriptors 1`] = `
{
  "get_agent_status": "f266cd0d63726471",
  "get_initiative_pulse": "3fec5846643f8987",
  "get_morning_brief": "d7a6c3e11b9c2f6b",
  "get_operator_chronicle": "c4098991bb7a0a1b",
  "orgx_attach": "a1db3412ef53d0a2",
  "orgx_bootstrap": "a509cb3f8a3193e6",
  "orgx_command_status": "bf565a9dad855288",
  "orgx_controller_status": "3a73c7ce857fa5cc",
  "orgx_decide": "f4370a5beae53ae4",
  "orgx_emit_activity": "9a669599bcf743c9",
  "orgx_expect": "215505c6582ecf93",
  "orgx_inspect": "a3310755ca68cd0d",
  "orgx_recommend": "05f7fa9274c70448",
  "orgx_search": "f99fd7c7687f97c8",
  "orgx_submit_receipt": "194befbde293540e",
  "orgx_tail": "d27b33e1225e6ac8",
}
`;

exports[`listed tool surfaces > profile "commander" lists byte-identical tool descriptors 1`] = `
{
  "check_execution_readiness": "8654b94408726684",
  "consolidate_pr": "6abba9a7b56106c6",
  "get_operator_chronicle": "c4098991bb7a0a1b",
  "orgx_ack_attention": "941ce0a2ee74b376",
  "orgx_act": "eec6b181ca7ae57c",
  "orgx_attach": "a1db3412ef53d0a2",
  "orgx_bootstrap": "a509cb3f8a3193e6",
  "orgx_command_status": "bf565a9dad855288",
  "orgx_complete_work": "a639f0c79f22d1cc",
  "orgx_create_work": "a311a644b2e0bcb0",
  "orgx_decide": "f4370a5beae53ae4",
  "orgx_emit_execution_graph": "ba185b07f418aaf7",
  "orgx_events_tail": "c04ebf4fa7bb29d6",
  "orgx_expect": "215505c6582ecf93",
  "orgx_get_agent_status": "4426296bbbb57da7",
  "orgx_get_initiative_progress": "a6fd830bb8f92410",
  "orgx_get_operation_status": "4498e689ee2c0119",
  "orgx_get_operator_brief": "ff13d1871db6661e",
  "orgx_get_workspace_context": "775df16c8548aa03",
  "orgx_inspect": "a3310755ca68cd0d",
  "orgx_launch_initiative": "dd0c1f34cfa40c3b",
  "orgx_list_pending_decisions": "cbcd42126fa8eee9",
  "orgx_plan": "e45e3e411c4ca083",
  "orgx_poll_attention": "5c6cc9bfb10f8625",
  "orgx_poll_question": "f9a8910b2190ca6b",
  "orgx_recommend": "05f7fa9274c70448",
  "orgx_record_plan_edit": "b39499f7468297ab",
  "orgx_request_attention": "e9b663b199b140f1",
  "orgx_request_question": "86e1d5eca987ab0e",
  "orgx_search": "f99fd7c7687f97c8",
  "orgx_spawn": "b1283814f0da803a",
  "orgx_submit_receipt": "194befbde293540e",
  "orgx_tail": "d27b33e1225e6ac8",
  "orgx_widget_decide": "75098f2ae324724f",
  "orgx_write": "83d98b5670c2e8b9",
  "resume_agent_run": "5c016323dee7914e",
  "scaffold_initiative": "21fd5da8fea984b6",
}
`;

exports[`listed tool surfaces > profile "executor" lists byte-identical tool descriptors 1`] = `
{
  "check_execution_readiness": "8654b94408726684",
  "consolidate_pr": "6abba9a7b56106c6",
  "orgx_ack_attention": "941ce0a2ee74b376",
  "orgx_act": "eec6b181ca7ae57c",
  "orgx_attach": "a1db3412ef53d0a2",
  "orgx_bootstrap": "a509cb3f8a3193e6",
  "orgx_command_status": "bf565a9dad855288",
  "orgx_complete_work": "a639f0c79f22d1cc",
  "orgx_create_work": "a311a644b2e0bcb0",
  "orgx_emit_activity": "9a669599bcf743c9",
  "orgx_emit_execution_graph": "ba185b07f418aaf7",
  "orgx_events_tail": "c04ebf4fa7bb29d6",
  "orgx_expect": "215505c6582ecf93",
  "orgx_get_agent_status": "4426296bbbb57da7",
  "orgx_get_initiative_progress": "a6fd830bb8f92410",
  "orgx_get_operation_status": "4498e689ee2c0119",
  "orgx_get_workspace_context": "775df16c8548aa03",
  "orgx_inspect": "a3310755ca68cd0d",
  "orgx_plan": "e45e3e411c4ca083",
  "orgx_poll_attention": "5c6cc9bfb10f8625",
  "orgx_poll_question": "f9a8910b2190ca6b",
  "orgx_record_plan_edit": "b39499f7468297ab",
  "orgx_request_attention": "e9b663b199b140f1",
  "orgx_request_question": "86e1d5eca987ab0e",
  "orgx_search": "f99fd7c7687f97c8",
  "orgx_spawn": "b1283814f0da803a",
  "orgx_submit_receipt": "194befbde293540e",
  "orgx_tail": "d27b33e1225e6ac8",
  "orgx_write": "83d98b5670c2e8b9",
  "resume_agent_run": "5c016323dee7914e",
}
`;

exports[`listed tool surfaces > profile "extended" lists byte-identical tool descriptors 1`] = `
{
  "orgx_activate_work": "ba0c1b99ddc2d63c",
  "orgx_archive_work": "68460348fe27e248",
  "orgx_attach_artifact": "6ccc4eb27b74a93c",
  "orgx_block_work": "ce271be484aaab0a",
  "orgx_cancel_work": "64213b7979c25e43",
  "orgx_capture_decision": "a778cf12f3853b35",
  "orgx_check_agent_delegation": "a4f6ec344067dbf9",
  "orgx_check_execution_readiness": "b4a9c9c334c65820",
  "orgx_classify_agent_task": "d31edcbee5a90ad7",
  "orgx_complete_entity": "eff92ce5ee8ba5e7",
  "orgx_complete_plan": "c2cd95375022867d",
  "orgx_complete_work_with_proof": "422682b6a61c9157",
  "orgx_create_and_launch_initiative_hierarchy": "fdd923d6d81f764b",
  "orgx_create_and_start_agent_task": "fd82bbdc78cb8a22",
  "orgx_create_decision": "20aa19a758b29df2",
  "orgx_create_initiative": "a48d54880bf14449",
  "orgx_create_initiative_hierarchy": "e5e2555578fcf32c",
  "orgx_create_milestone": "bc14153674491f3e",
  "orgx_create_task": "ef910b43e6d44305",
  "orgx_create_workstream": "0c7aacb11b816c9b",
  "orgx_delete_work": "659bed379db4bbae",
  "orgx_estimate_agent_task": "d89945435995aecf",
  "orgx_flag_risk_work": "c14f42726d63d1d2",
  "orgx_get_agent_status": "4426296bbbb57da7",
  "orgx_get_initiative_progress": "a6fd830bb8f92410",
  "orgx_get_next_actions": "175f6fa8fda2a639",
  "orgx_get_operation_status": "4498e689ee2c0119",
  "orgx_get_operator_brief": "ff13d1871db6661e",
  "orgx_get_receipt_review_queue": "76cb026d706cd17f",
  "orgx_get_work_receipt": "61f894517bd4b90d",
  "orgx_get_workspace_context": "775df16c8548aa03",
  "orgx_handoff_task": "8b24cfca9358e578",
  "orgx_inspect": "a3310755ca68cd0d",
  "orgx_launch_initiative": "dd0c1f34cfa40c3b",
  "orgx_list_pending_decisions": "cbcd42126fa8eee9",
  "orgx_list_work_receipts": "2a2aa1500c9a13cf",
  "orgx_open_artifact_review": "539fb87f468293e5",
  "orgx_open_decision_approval_review": "af629e2946d7c159",
  "orgx_open_decision_rejection_review": "3b6b48d7c462ce87",
  "orgx_open_decision_review": "892a00f2fe48b8b8",
  "orgx_panel_snapshot": "5ab21a96dc7942ff",
  "orgx_pause_work": "0f9b5a001211b5dc",
  "orgx_read_plan": "9048c91df50196ac",
  "orgx_reassign_streams_work": "a307702a0536c0e4",
  "orgx_record_plan_edit": "b39499f7468297ab",
  "orgx_reopen_work": "fa0fbe847420583d",
  "orgx_request_independent_artifact_review": "f46def909efda1ff",
  "orgx_request_plan_critique": "b0f1bb0151309dc7",
  "orgx_resume_work": "5f0422b50830fcd2",
  "orgx_retry_work": "b9cec22e43404def",
  "orgx_save_plan": "c882dfe2f429d51e",
  "orgx_search": "f99fd7c7687f97c8",
  "orgx_ship_batch_work": "0df1d2fa15d509f8",
  "orgx_start_agent_task": "5985a83792b97d34",
  "orgx_start_plan": "97ac287396ae8cfc",
  "orgx_start_work": "a941077b82bdf078",
  "orgx_submit_work_receipt": "e10d046c0b4bc526",
  "orgx_unblock_work": "8fadfb65cb61f203",
  "orgx_update_work": "36a91bd849acaf6f",
  "orgx_validate_initiative_plan": "cf1b9a68ea49d5cd",
  "orgx_validate_studio_content": "bf26c8739f0ca9b9",
  "orgx_validate_work_receipt": "48cfae9eafa43ea6",
  "orgx_widget_approve_artifact": "4841c5d6e8271f8b",
  "orgx_widget_decide": "75098f2ae324724f",
  "orgx_widget_receipt_call": "4ec7f75836201db8",
  "orgx_widget_request_artifact_changes": "f69dc65a2590239d",
  "orgx_widget_select_workspace": "e4ebe2320cc96511",
  "resume_agent_run": "5c016323dee7914e",
}
`;

exports[`listed tool surfaces > profile "full" lists byte-identical tool descriptors 1`] = `
{
  "account_status": "3780d8aa7fa4183c",
  "account_upgrade": "89f745acc1a28f56",
  "account_usage_report": "da047ce753cf6d71",
  "approve_agent_work": "2718b8476741870b",
  "approve_decision": "2a9ae7a11e969b29",
  "batch_action": "1c587cc9617bd819",
  "batch_create_entities": "2f127a87b52bfcc0",
  "batch_delete_entities": "697c1a123e7522f2",
  "check_execution_readiness": "8654b94408726684",
  "check_spawn_guard": "e5224687a58937f5",
  "classify_task_model": "ca122096a65b7b90",
  "comment_on_entity": "cc095a2101a4dc67",
  "complete_plan": "669bfa016250d582",
  "configure_org": "5e067157f6de4a23",
  "configure_outcome_type": "cb02470d0e404c76",
  "consolidate_pr": "6abba9a7b56106c6",
  "create_decision": "8fb6a22d7ec5e370",
  "create_entity": "230c44c01cf09cf9",
  "create_milestone": "c302e98c9c12e849",
  "create_task": "94df618311eaf4ce",
  "delegate_agent_task": "ae624f12057af3f8",
  "entity_action": "e98271e996dad3af",
  "get_active_sessions": "37d81ba0695ed5eb",
  "get_agent_status": "f266cd0d63726471",
  "get_decision_history": "0f148975624fc365",
  "get_initiative_pulse": "3fec5846643f8987",
  "get_initiative_stream_state": "622513234e9f4010",
  "get_morning_brief": "d7a6c3e11b9c2f6b",
  "get_my_trust_context": "4a9071597260d592",
  "get_operator_chronicle": "c4098991bb7a0a1b",
  "get_org_snapshot": "b30ff821487ebaf7",
  "get_outcome_attribution": "a82005d4d9d1d163",
  "get_pending_decisions": "b60b5c890b6407dc",
  "get_relevant_learnings": "0baed2d7ea3869de",
  "get_scoring_signals": "a1e70a55763364c1",
  "get_task_with_context": "123676ee529920a1",
  "handoff_task": "d4d652946ed1a6f8",
  "improve_plan": "a3e512f1d600e83c",
  "list_entities": "7418bced289fe206",
  "list_entity_comments": "3c0fbaf5bf750e92",
  "manage_lifecycle": "fc7b514fcf475c51",
  "orgx_ack_attention": "941ce0a2ee74b376",
  "orgx_act": "eec6b181ca7ae57c",
  "orgx_activate_work": "ba0c1b99ddc2d63c",
  "orgx_apply_changeset": "efa7b2ed216c06f0",
  "orgx_archive_work": "68460348fe27e248",
  "orgx_attach": "a1db3412ef53d0a2",
  "orgx_attach_artifact": "6ccc4eb27b74a93c",
  "orgx_block_work": "ce271be484aaab0a",
  "orgx_bootstrap": "a509cb3f8a3193e6",
  "orgx_cancel_work": "64213b7979c25e43",
  "orgx_capture_decision": "a778cf12f3853b35",
  "orgx_check_agent_delegation": "a4f6ec344067dbf9",
  "orgx_check_execution_readiness": "b4a9c9c334c65820",
  "orgx_classify_agent_task": "d31edcbee5a90ad7",
  "orgx_command_status": "bf565a9dad855288",
  "orgx_complete_entity": "eff92ce5ee8ba5e7",
  "orgx_complete_plan": "c2cd95375022867d",
  "orgx_complete_work": "a639f0c79f22d1cc",
  "orgx_complete_work_with_proof": "422682b6a61c9157",
  "orgx_controller_status": "3a73c7ce857fa5cc",
  "orgx_create_and_launch_initiative_hierarchy": "fdd923d6d81f764b",
  "orgx_create_and_start_agent_task": "fd82bbdc78cb8a22",
  "orgx_create_decision": "20aa19a758b29df2",
  "orgx_create_initiative": "a48d54880bf14449",
  "orgx_create_initiative_hierarchy": "e5e2555578fcf32c",
  "orgx_create_milestone": "bc14153674491f3e",
  "orgx_create_task": "ef910b43e6d44305",
  "orgx_create_work": "a311a644b2e0bcb0",
  "orgx_create_workstream": "0c7aacb11b816c9b",
  "orgx_decide": "f4370a5beae53ae4",
  "orgx_delete_work": "659bed379db4bbae",
  "orgx_describe_action": "a6dde8e9c3c2fe72",
  "orgx_describe_tool": "d7334c7342534ed7",
  "orgx_emit_activity": "9a669599bcf743c9",
  "orgx_emit_execution_graph": "ba185b07f418aaf7",
  "orgx_estimate_agent_task": "d89945435995aecf",
  "orgx_events_tail": "c04ebf4fa7bb29d6",
  "orgx_expect": "215505c6582ecf93",
  "orgx_flag_risk_work": "c14f42726d63d1d2",
  "orgx_free_audit": "2564eefddf9d0826",
  "orgx_get_agent_status": "4426296bbbb57da7",
  "orgx_get_initiative_progress": "a6fd830bb8f92410",
  "orgx_get_next_actions": "175f6fa8fda2a639",
  "orgx_get_operation_status": "4498e689ee2c0119",
  "orgx_get_operator_brief": "ff13d1871db6661e",
  "orgx_get_receipt_review_queue": "76cb026d706cd17f",
  "orgx_get_work_receipt": "61f894517bd4b90d",
  "orgx_get_workspace_context": "775df16c8548aa03",
  "orgx_handoff_task": "8b24cfca9358e578",
  "orgx_inspect": "a3310755ca68cd0d",
  "orgx_launch_initiative": "dd0c1f34cfa40c3b",
  "orgx_lease": "a0cd51b65bf2ebc9",
  "orgx_list_pending_decisions": "cbcd42126fa8eee9",
  "orgx_list_work_receipts": "2a2aa1500c9a13cf",
  "orgx_open_artifact_review": "539fb87f468293e5",
  "orgx_open_decision_approval_review": "af629e2946d7c159",
  "orgx_open_decision_rejection_review": "3b6b48d7c462ce87",
  "orgx_open_decision_review": "892a00f2fe48b8b8",
  "orgx_panel_snapshot": "5ab21a96dc7942ff",
  "orgx_pause_work": "0f9b5a001211b5dc",
  "orgx_plan": "e45e3e411c4ca083",
  "orgx_poll_attention": "5c6cc9bfb10f8625",
  "orgx_poll_question": "f9a8910b2190ca6b",
  "orgx_read_plan": "9048c91df50196ac",
  "orgx_reassign_streams_work": "a307702a0536c0e4",
  "orgx_recommend": "05f7fa9274c70448",
  "orgx_record_plan_edit": "b39499f7468297ab",
  "orgx_reopen_work": "fa0fbe847420583d",
  "orgx_request_attention": "e9b663b199b140f1",
  "orgx_request_independent_artifact_review": "f46def909efda1ff",
  "orgx_request_plan_critique": "b0f1bb0151309dc7",
  "orgx_request_question": "86e1d5eca987ab0e",
  "orgx_resume_work": "5f0422b50830fcd2",
  "orgx_retry_work": "b9cec22e43404def",
  "orgx_save_plan": "c882dfe2f429d51e",
  "orgx_search": "f99fd7c7687f97c8",
  "orgx_ship_batch_work": "0df1d2fa15d509f8",
  "orgx_spawn": "b1283814f0da803a",
  "orgx_start_agent_task": "5985a83792b97d34",
  "orgx_start_plan": "97ac287396ae8cfc",
  "orgx_start_work": "a941077b82bdf078",
  "orgx_submit_receipt": "194befbde293540e",
  "orgx_submit_work_receipt": "e10d046c0b4bc526",
  "orgx_tail": "d27b33e1225e6ac8",
  "orgx_unblock_work": "8fadfb65cb61f203",
  "orgx_update_work": "36a91bd849acaf6f",
  "orgx_validate_initiative_plan": "cf1b9a68ea49d5cd",
  "orgx_validate_studio_content": "bf26c8739f0ca9b9",
  "orgx_validate_work_receipt": "48cfae9eafa43ea6",
  "orgx_widget_approve_artifact": "4841c5d6e8271f8b",
  "orgx_widget_decide": "75098f2ae324724f",
  "orgx_widget_receipt_call": "4ec7f75836201db8",
  "orgx_widget_request_artifact_changes": "f69dc65a2590239d",
  "orgx_widget_select_workspace": "e4ebe2320cc96511",
  "orgx_write": "83d98b5670c2e8b9",
  "pin_workstream": "264a1edf7eda05aa",
  "query_org_memory": "b992a8515583399b",
  "queue_action": "3d27e6294a02761d",
  "recall_memory": "6092409b0d5bc26b",
  "recommend_next_action": "3916a8a4d2c7525d",
  "record_outcome": "ee4624f4f5b7513b",
  "record_plan_edit": "707737413b3c4ba5",
  "record_quality_score": "e99358b33099cc14",
  "reject_decision": "c5bedfd37dd63ed2",
  "remember_decision": "ab09b087806033a2",
  "request_independent_artifact_review": "57cf65c7729ecfd4",
  "resume_agent_run": "5c016323dee7914e",
  "resume_plan_session": "b836de74a1f20d0a",
  "review_artifact": "326e48293c3f656d",
  "save_artifact": "a79f894f98f20294",
  "scaffold_initiative": "21fd5da8fea984b6",
  "score_next_up_queue": "48c368c412cb805e",
  "scoring_config": "978827eec8a0dbc8",
  "spawn_agent_task": "7564e8148f1ad541",
  "start_autonomous_session": "a5705112639e35b5",
  "start_plan_session": "4e41aad2cbd94bc3",
  "stats": "fce830c9981265c4",
  "submit_learning": "bc02887779c7f0a6",
  "sync_client_state": "62c42527e1fee26f",
  "track_project_progress": "4580c88252fd709e",
  "update_entity": "9dba71debab229fa",
  "update_stream_progress": "1d975e8c143e6581",
  "validate_studio_content": "d13ac4168277e7bc",
  "verify_entity_completion": "51b74544d263526e",
  "workspace": "ee60cd85919387e7",
}
`;

exports[`listed tool surfaces > profile "legacy" lists byte-identical tool descriptors 1`] = `
{
  "approve_agent_work": "2718b8476741870b",
  "approve_decision": "2a9ae7a11e969b29",
  "check_execution_readiness": "8654b94408726684",
  "consolidate_pr": "6abba9a7b56106c6",
  "delegate_agent_task": "ae624f12057af3f8",
  "get_agent_status": "f266cd0d63726471",
  "get_initiative_pulse": "3fec5846643f8987",
  "get_morning_brief": "d7a6c3e11b9c2f6b",
  "get_operator_chronicle": "c4098991bb7a0a1b",
  "handoff_task": "d4d652946ed1a6f8",
  "manage_lifecycle": "fc7b514fcf475c51",
  "orgx_ack_attention": "941ce0a2ee74b376",
  "orgx_act": "eec6b181ca7ae57c",
  "orgx_attach": "a1db3412ef53d0a2",
  "orgx_bootstrap": "a509cb3f8a3193e6",
  "orgx_command_status": "bf565a9dad855288",
  "orgx_controller_status": "3a73c7ce857fa5cc",
  "orgx_decide": "f4370a5beae53ae4",
  "orgx_emit_activity": "9a669599bcf743c9",
  "orgx_emit_execution_graph": "ba185b07f418aaf7",
  "orgx_expect": "215505c6582ecf93",
  "orgx_get_agent_status": "4426296bbbb57da7",
  "orgx_get_initiative_progress": "a6fd830bb8f92410",
  "orgx_get_operation_status": "4498e689ee2c0119",
  "orgx_get_operator_brief": "ff13d1871db6661e",
  "orgx_get_work_receipt": "61f894517bd4b90d",
  "orgx_get_workspace_context": "775df16c8548aa03",
  "orgx_inspect": "a3310755ca68cd0d",
  "orgx_launch_initiative": "dd0c1f34cfa40c3b",
  "orgx_list_pending_decisions": "cbcd42126fa8eee9",
  "orgx_list_work_receipts": "2a2aa1500c9a13cf",
  "orgx_panel_snapshot": "5ab21a96dc7942ff",
  "orgx_plan": "e45e3e411c4ca083",
  "orgx_poll_attention": "5c6cc9bfb10f8625",
  "orgx_poll_question": "f9a8910b2190ca6b",
  "orgx_recommend": "05f7fa9274c70448",
  "orgx_record_plan_edit": "b39499f7468297ab",
  "orgx_request_attention": "e9b663b199b140f1",
  "orgx_request_question": "86e1d5eca987ab0e",
  "orgx_search": "f99fd7c7687f97c8",
  "orgx_spawn": "b1283814f0da803a",
  "orgx_submit_receipt": "194befbde293540e",
  "orgx_tail": "d27b33e1225e6ac8",
  "orgx_widget_approve_artifact": "4841c5d6e8271f8b",
  "orgx_widget_decide": "75098f2ae324724f",
  "orgx_widget_receipt_call": "4ec7f75836201db8",
  "orgx_widget_request_artifact_changes": "f69dc65a2590239d",
  "orgx_widget_select_workspace": "e4ebe2320cc96511",
  "orgx_write": "83d98b5670c2e8b9",
  "query_org_memory": "b992a8515583399b",
  "recall_memory": "6092409b0d5bc26b",
  "recommend_next_action": "3916a8a4d2c7525d",
  "reject_decision": "c5bedfd37dd63ed2",
  "request_independent_artifact_review": "57cf65c7729ecfd4",
  "resume_agent_run": "5c016323dee7914e",
  "review_artifact": "326e48293c3f656d",
  "scaffold_initiative": "21fd5da8fea984b6",
  "spawn_agent_task": "7564e8148f1ad541",
  "track_project_progress": "4580c88252fd709e",
}
`;

exports[`listed tool surfaces > profile "memory" lists byte-identical tool descriptors 1`] = `
{
  "orgx_attach": "a1db3412ef53d0a2",
  "orgx_bootstrap": "a509cb3f8a3193e6",
  "orgx_decide": "f4370a5beae53ae4",
  "orgx_expect": "215505c6582ecf93",
  "orgx_get_agent_status": "4426296bbbb57da7",
  "orgx_get_initiative_progress": "a6fd830bb8f92410",
  "orgx_get_operation_status": "4498e689ee2c0119",
  "orgx_get_workspace_context": "775df16c8548aa03",
  "orgx_inspect": "a3310755ca68cd0d",
  "orgx_list_pending_decisions": "cbcd42126fa8eee9",
  "orgx_recommend": "05f7fa9274c70448",
  "orgx_search": "f99fd7c7687f97c8",
  "orgx_submit_receipt": "194befbde293540e",
  "orgx_widget_decide": "75098f2ae324724f",
  "resume_agent_run": "5c016323dee7914e",
}
`;

exports[`listed tool surfaces > profile "observer" lists byte-identical tool descriptors 1`] = `
{
  "get_operator_chronicle": "c4098991bb7a0a1b",
  "orgx_bootstrap": "a509cb3f8a3193e6",
  "orgx_command_status": "bf565a9dad855288",
  "orgx_decide": "f4370a5beae53ae4",
  "orgx_events_tail": "c04ebf4fa7bb29d6",
  "orgx_get_agent_status": "4426296bbbb57da7",
  "orgx_get_initiative_progress": "a6fd830bb8f92410",
  "orgx_get_operation_status": "4498e689ee2c0119",
  "orgx_get_operator_brief": "ff13d1871db6661e",
  "orgx_get_workspace_context": "775df16c8548aa03",
  "orgx_inspect": "a3310755ca68cd0d",
  "orgx_list_pending_decisions": "cbcd42126fa8eee9",
  "orgx_plan": "e45e3e411c4ca083",
  "orgx_poll_attention": "5c6cc9bfb10f8625",
  "orgx_poll_question": "f9a8910b2190ca6b",
  "orgx_recommend": "05f7fa9274c70448",
  "orgx_record_plan_edit": "b39499f7468297ab",
  "orgx_search": "f99fd7c7687f97c8",
  "orgx_tail": "d27b33e1225e6ac8",
  "orgx_widget_decide": "75098f2ae324724f",
  "resume_agent_run": "5c016323dee7914e",
}
`;

exports[`listed tool surfaces > profile "planner" lists byte-identical tool descriptors 1`] = `
{
  "orgx_act": "eec6b181ca7ae57c",
  "orgx_bootstrap": "a509cb3f8a3193e6",
  "orgx_command_status": "bf565a9dad855288",
  "orgx_decide": "f4370a5beae53ae4",
  "orgx_expect": "215505c6582ecf93",
  "orgx_get_agent_status": "4426296bbbb57da7",
  "orgx_get_initiative_progress": "a6fd830bb8f92410",
  "orgx_get_operation_status": "4498e689ee2c0119",
  "orgx_get_workspace_context": "775df16c8548aa03",
  "orgx_inspect": "a3310755ca68cd0d",
  "orgx_launch_initiative": "dd0c1f34cfa40c3b",
  "orgx_list_pending_decisions": "cbcd42126fa8eee9",
  "orgx_plan": "e45e3e411c4ca083",
  "orgx_poll_attention": "5c6cc9bfb10f8625",
  "orgx_poll_question": "f9a8910b2190ca6b",
  "orgx_record_plan_edit": "b39499f7468297ab",
  "orgx_request_attention": "e9b663b199b140f1",
  "orgx_request_question": "86e1d5eca987ab0e",
  "orgx_search": "f99fd7c7687f97c8",
  "orgx_widget_decide": "75098f2ae324724f",
  "orgx_write": "83d98b5670c2e8b9",
  "resume_agent_run": "5c016323dee7914e",
  "scaffold_initiative": "21fd5da8fea984b6",
}
`;

exports[`listed tool surfaces > profile "read-only" lists byte-identical tool descriptors 1`] = `
{
  "orgx_get_agent_status": "4426296bbbb57da7",
  "orgx_get_initiative_progress": "a6fd830bb8f92410",
  "orgx_get_next_actions": "175f6fa8fda2a639",
  "orgx_get_operation_status": "4498e689ee2c0119",
  "orgx_get_operator_brief": "ff13d1871db6661e",
  "orgx_inspect": "a3310755ca68cd0d",
  "orgx_search": "f99fd7c7687f97c8",
}
`;

exports[`listed tool surfaces > profile "v2" lists byte-identical tool descriptors 1`] = `
{
  "orgx_attach_artifact": "6ccc4eb27b74a93c",
  "orgx_cancel_work": "64213b7979c25e43",
  "orgx_capture_decision": "a778cf12f3853b35",
  "orgx_check_execution_readiness": "b4a9c9c334c65820",
  "orgx_complete_plan": "c2cd95375022867d",
  "orgx_complete_work_with_proof": "422682b6a61c9157",
  "orgx_create_initiative": "a48d54880bf14449",
  "orgx_create_initiative_hierarchy": "e5e2555578fcf32c",
  "orgx_create_milestone": "bc14153674491f3e",
  "orgx_create_task": "ef910b43e6d44305",
  "orgx_create_workstream": "0c7aacb11b816c9b",
  "orgx_estimate_agent_task": "d89945435995aecf",
  "orgx_get_agent_status": "4426296bbbb57da7",
  "orgx_get_initiative_progress": "a6fd830bb8f92410",
  "orgx_get_next_actions": "175f6fa8fda2a639",
  "orgx_get_operation_status": "4498e689ee2c0119",
  "orgx_get_operator_brief": "ff13d1871db6661e",
  "orgx_get_receipt_review_queue": "76cb026d706cd17f",
  "orgx_get_work_receipt": "61f894517bd4b90d",
  "orgx_get_workspace_context": "775df16c8548aa03",
  "orgx_handoff_task": "8b24cfca9358e578",
  "orgx_inspect": "a3310755ca68cd0d",
  "orgx_launch_initiative": "dd0c1f34cfa40c3b",
  "orgx_list_pending_decisions": "cbcd42126fa8eee9",
  "orgx_list_work_receipts": "2a2aa1500c9a13cf",
  "orgx_open_artifact_review": "539fb87f468293e5",
  "orgx_open_decision_review": "892a00f2fe48b8b8",
  "orgx_panel_snapshot": "5ab21a96dc7942ff",
  "orgx_pause_work": "0f9b5a001211b5dc",
  "orgx_read_plan": "9048c91df50196ac",
  "orgx_record_plan_edit": "b39499f7468297ab",
  "orgx_request_independent_artifact_review": "f46def909efda1ff",
  "orgx_resume_work": "5f0422b50830fcd2",
  "orgx_retry_work": "b9cec22e43404def",
  "orgx_save_plan": "c882dfe2f429d51e",
  "orgx_search": "f99fd7c7687f97c8",
  "orgx_start_agent_task": "5985a83792b97d34",
  "orgx_start_plan": "97ac287396ae8cfc",
  "orgx_submit_work_receipt": "e10d046c0b4bc526",
  "orgx_update_work": "36a91bd849acaf6f",
  "orgx_validate_initiative_plan": "cf1b9a68ea49d5cd",
  "orgx_validate_work_receipt": "48cfae9eafa43ea6",
  "orgx_widget_approve_artifact": "4841c5d6e8271f8b",
  "orgx_widget_decide": "75098f2ae324724f",
  "orgx_widget_receipt_call": "4ec7f75836201db8",
  "orgx_widget_request_artifact_changes": "f69dc65a2590239d",
  "orgx_widget_select_workspace": "e4ebe2320cc96511",
  "resume_agent_run": "5c016323dee7914e",
}
`;
